--- a/Virtual_Environment/Django Projects/forkinfosystem/course/templates/course/c_home.html
+++ b/Virtual_Environment/Django Projects/forkinfosystem/course/templates/course/c_home.html
@@ -4,14 +4,14 @@
   <div class="row">
         {% for i in courses %}
         <div class="col-md-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 310px; height: 300px;">
                 <img src="{{ i.img }}" class="card-img-top" alt="{{  i.title }} Photo" height="200" width="300">
                 <div class="card-body">
                 <center><h4 class="card-title">{{ i.title }}</h4></center>
-                <h6 class="card-title">Fees : Rs. {{ i.fees }}</h6>
-                <h6 class="card-title">Duration : {{ i.duration }} Months</h6>
+                <!-- <h6 class="card-title">Fees : Rs. {{ i.fees }}</h6>
+                <h6 class="card-title">Duration : {{ i.duration }} Months</h6> -->
                 
-                <a href="{% url 'More-Info-Course' i.id %}" class="btn btn-primary">More Info</a>
+                <center><a href="{% url 'More-Info-Course' i.id %}" class="btn btn-primary">More Info</a></center>
                 </div>
             </div>
         <br/>
