--- a/Django/NEW_VENV/ForkInfoSystem/blogs/templates/blogs/bloghome.html
+++ b/Django/NEW_VENV/ForkInfoSystem/blogs/templates/blogs/bloghome.html
@@ -11,6 +11,11 @@
             <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Latest Post</a>
             <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
           </div>
+          <br/>
+          <article class="media content-section">
+            <img class="card-img-top" src="https://c4.wallpaperflare.com/wallpaper/758/592/32/amoled-dark-vertical-hd-wallpaper-preview.jpg" alt="Card image cap">
+        
+          </article>
         </div>
         <div class="col-8">
           <div class="tab-content" id="nav-tabContent">
@@ -58,7 +63,12 @@
                     <h2><a class="article-title" href="#">{{ lastest.title }}</a></h2>
                     <p class="article-content">{{ latest.content }}</p>
                 </div>
-            </article>
+              </article>
+              <article class="media content-section">
+                <img class="card-img-top" src="https://c4.wallpaperflare.com/wallpaper/53/375/718/laptop-wallpaper-preview.jpg" alt="Card image cap">
+            
+              </article>
+              <br/>
             </div>
             
             <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
