--- a/Django/NEW_VENV/ForkInfoSystem/courses/static/courses/main.css
+++ b/Django/NEW_VENV/ForkInfoSystem/courses/static/courses/main.css
@@ -82,3 +82,14 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+.footer {
+  position: fixed;
+  left: 10px;
+  bottom: 5px;
+  right: 10px; 
+  width: 95%;
+  background-color: gray;
+  color: white;
+  text-align: center;
+  }
